--- a/config/test.yml
+++ b/config/test.yml
@@ -10,5 +10,6 @@ certificate_authority:
     ST: California
     L: Santa Barbara
     O: receipt.com
-    OU: IT
-  expiry_seconds: 3.15569e8 # 10 years in seconds
+    OU: Engineering
+  expiry_seconds: 3.15569e+8 # 10 years in seconds
+  serial: 1
