Get rid of CertificateSigner class

--- a/config/test.yml
+++ b/config/test.yml
@@ -9,8 +9,9 @@ certificate_authority:
     C: US
     ST: California
     L: Santa Barbara
-    O: receipt.com
+    O: example.com
     OU: Engineering
+  email: licensing@example.com
   expiry_seconds: 3.15569e+8 # 10 years in seconds
   serial: 1
   version: 2
