--- a/config/test.yml
+++ b/config/test.yml
@@ -16,5 +16,6 @@ certificate_authority:
   version: 2 # this means version 3--X.509 certificate versions are 0-indexed. >_<
 client:
   identity_key: '70257366ab3bad7832e3b69d5e9b640e' # MD5 sum of the string "REAL ULTIMATE POWER"
-  server: http://localhost:4567 # Sinatra port is used in testing
+  server: localhost
+  port: 4567 # Sinatra port is used in testing
   name: Signet Test Client
